# Rgram

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
.hypothesis/constants/: 19e1c8e27b1d4800  35099fe34da18e0a  39ca76670165e1c4  51edaa87a425d36a  aa2c05c533ad5b53
.hypothesis/examples/04e6b3400353b141/: 21e8b8c63cbaabb3  5232cc1119ac0295  9fcbc610c12f165a  a16a666827ef4f73
.hypothesis/examples/21e8b8c63cbaabb3/: f800bcc33f3d2aba
.hypothesis/examples/5232cc1119ac0295/: e7b7a7d9645eb075
.hypothesis/examples/9fcbc610c12f165a/: 0509d4d9e3fac4ef  1903252b4b50e48f  2e1f77f04a600f76  352c55f7e797eada  3e96ffb4821c4345  8ddc12e7ceb0e642  c577bfff17c9de50  cc446cc87ab7b68a  cd94cfeebedf24e2
.hypothesis/examples/a16a666827ef4f73/: 2ce0ed794f2152b3
src/rgram/: __init__.py  base.py  dclasses.py  np_rgram.py  pl_rgram.py  plot.py  rgram.py  smoothing.py
src/rgram/deprecated/: old_rgram.py  smoothing.py
tests/: conftest.py  test_aggregation.py  test_baseutils.py  test_basic.py  test_comprehensive_workflows.py  test_data_validation.py  test_duplicate_aggregation_consistency.py  test_duplicate_preservation.py  test_edge_cases.py  test_error_handling.py  test_integration.py  test_kernel_smoother.py  test_numerical_accuracy.py  test_ols.py  test_parametric.py  test_performance.py  test_predict.py  test_sorting_preservation.py
