[project]
name = "rgram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jack" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "polars>=1.28.1",
    "polars-ols>=0.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "ruff>=0.11.5",
]
