[project]
name = "rgram"
version = "0.2.1"
description = "A Python library for regressograms and kernel smoothing, designed for data analysis and visualisation."
readme = "README.md"
authors = [
    { name = "Jack" }
]
requires-python = ">=3.9"
dependencies = [
    "polars>=1.28.1",
    "polars-ols>=0.3.5",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "ruff>=0.14.7",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
]
